--- a/gallery/mainApp/templates/Home.html
+++ b/gallery/mainApp/templates/Home.html
@@ -1,79 +1,123 @@
-{% extends 'base.html' %}
+{% extends 'base.html' %} {% block content %}
+<button
+  class="btn btn-primary"
+  data-target="#RegisterModal"
+  data-toggle="modal"
+  type="button"
+>
+  Регистрация
+</button>
 
-{% block content %}
-    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#RegisterModal">
-    Регистрация
-    </button>
-
-    <form method="post" name="register_form">
-    {% csrf_token %}
-      <div class="modal fade" id="RegisterModal" tabindex="-1" role="dialog" aria-labelledby="RegisterModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="RegisterModalLabel">Registration</h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <div class="modal-body">
-              {{ registration_form.as_p }}
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-              <button type="submit" class="btn btn-primary" name="register_form">Register</button>
-            </div>
-          </div>
+<form method="post" name="register_form">
+  {% csrf_token %}
+  <div
+    aria-hidden="true"
+    aria-labelledby="RegisterModalLabel"
+    class="modal fade"
+    id="RegisterModal"
+    role="dialog"
+    tabindex="-1"
+  >
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="RegisterModalLabel">Registration</h5>
+          <button
+            aria-label="Close"
+            class="close"
+            data-dismiss="modal"
+            type="button"
+          >
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">{{ registration_form.as_p }}</div>
+        <div class="modal-footer">
+          <button class="btn btn-secondary" data-dismiss="modal" type="button">
+            Close
+          </button>
+          <button class="btn btn-primary" name="register_form" type="submit">
+            Register
+          </button>
         </div>
       </div>
-    </form>
+    </div>
+  </div>
+</form>
 
-    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#LoginModal">
-    Авторизация
-    </button>
-    <form method="post" name="login_form">
-      {% csrf_token %}
-      <div class="modal fade" id="LoginModal" tabindex="-1" role="dialog" aria-labelledby="LoginModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="LoginModalLabel">Auth</h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <div class="modal-body">
-              {{ login_form.as_p }}
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-              <button type="submit" class="btn btn-primary" name="login_form">Sign in</button>
-            </div>
-          </div>
+<button
+  class="btn btn-primary"
+  data-target="#LoginModal"
+  data-toggle="modal"
+  type="button"
+>
+  Авторизация
+</button>
+<form method="post" name="login_form">
+  {% csrf_token %}
+  <div
+    aria-hidden="true"
+    aria-labelledby="LoginModalLabel"
+    class="modal fade"
+    id="LoginModal"
+    role="dialog"
+    tabindex="-1"
+  >
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="LoginModalLabel">Auth</h5>
+          <button
+            aria-label="Close"
+            class="close"
+            data-dismiss="modal"
+            type="button"
+          >
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">{{ login_form.as_p }}</div>
+        <div class="modal-footer">
+          <button class="btn btn-secondary" data-dismiss="modal" type="button">
+            Close
+          </button>
+          <button class="btn btn-primary" name="login_form" type="submit">
+            Sign in
+          </button>
         </div>
       </div>
-     </form>
+    </div>
+  </div>
+</form>
 
 <script>
-    {% if show_registration_form %}
-        // Открываем модальное окно для формы регистрации
-        $(document).ready(function () {
-            $('#RegisterModal').modal('show');
-        });
-    {% endif %}
+  {%
+      if show_registration_form %
+  }
+  // Открываем модальное окно для формы регистрации
+  $(document).ready(function () {
+      $('#RegisterModal').modal('show');
+  });
+  {%
+      endif %
+  }
 
-    {% if show_login_form %}
-        // Открываем модальное окно для формы входа
-        $(document).ready(function () {
-            $('#LoginModal').modal('show');
-        });
-    {% endif %}
+  {%
+      if show_login_form %
+  }
+  // Открываем модальное окно для формы входа
+  $(document).ready(function () {
+      $('#LoginModal').modal('show');
+  });
+  {%
+      endif %
+  }
 
-    $(document).ready(function () {
-        // Очищаем все поля формы при закрытии модального окна
-        $('.modal').on('hidden.bs.modal', function () {
-            $(this).find('form')[0].reset();
-        });
-    });
+  $(document).ready(function () {
+      // Очищаем все поля формы при закрытии модального окна
+      $('.modal').on('hidden.bs.modal', function () {
+          $(this).find('form')[0].reset();
+      });
+  });
 </script>
 {% endblock %}
