--- a/gallery/mainApp/templates/BaseGallery.html
+++ b/gallery/mainApp/templates/BaseGallery.html
@@ -1,64 +1,84 @@
 {% load static %}
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<meta charset="UTF-8">
-<head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{% block title %}{% endblock %}</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI/tTQaC2FkY9e3kVbZUlg/e51Z8+JJw8MaXaOqI=" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="{% static 'css/main.css'%}">
-</head>
-<body>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://code.jquery.com/jquery-3.6.4.min.js"
+      integrity="sha256-oP6HI/tTQaC2FkY9e3kVbZUlg/e51Z8+JJw8MaXaOqI="
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"
+    ></script>
+    <script src="{% static 'js/main.js' %}"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
+    />
+    <link rel="stylesheet" href="{% static 'css/main.css' %}" />
+  </head>
+  <body>
     <div class="topnav">
-        <h1 class="logo">
-            <a href="#">SharedPhotos</a>
-        </h1>
-        <input type="text" placeholder="Search..">
-        <div class="buttons-container">
-            <button>Кнопка 1</button>
-            <button>Кнопка 2</button>
-        </div>
+      <h1 class="logo">
+        <a href="#">Sharedphotos</a>
+      </h1>
+      <div class="search-input">
+        <img class="search" src="../../static/svg/search%201.svg" alt="" />
+        <input type="text" placeholder="Поиск в хранилище" />
+        <img
+          class="menu-burger"
+          src="../../static/svg/menu-burger%201.svg"
+          alt=""
+        />
+      </div>
+      <div class="buttons-container">
+        <button>Кнопка 1</button>
+        <button>Кнопка 2</button>
+      </div>
     </div>
     <header class="headernav" role="banner">
-        <div class="nav-wrap">
-            <nav class="main-nav" role="navigation">
-                <ul class="unstyled list-hover-slide">
-                    <li>
-                        <button id="upload-btn">Upload Photos</button>
-                            <form id="upload-form" action="" method="post" autocomplete="off" enctype="multipart/form-data">
-                            {% csrf_token %}
-                            {{ form.as_p }}
-                            <input type="file" name="images" multiple>
-                            <input type="submit" value="Submit">
-                            </form>
-                    </li>
-                    <li>
-                        <a href="#"><i class="bi bi-camera-video"></i> Видео</a>
-                    </li>
-                    <li><a href="#"><i class="bi bi-images"></i> Фотографии</a></li>
-                    <li><a href="#"><i class="bi bi-book"></i> Альбомы</a></li>
-                    <li><a href="#"><i class="bi bi-trash3"></i> Корзина</a></li>
-                </ul>
-            </nav>
-        </div>
+      <div class="nav-wrap">
+        <nav class="main-nav" role="navigation">
+          <ul class="unstyled list-hover-slide">
+            <li>
+              <div class="upload">
+                <img src="../../static/svg/plus.svg" alt="" />
+                <label for="file_out" class="feedback__label">Загрузить</label>
+                <input type="file" id="file_out" class="feedback__file" />
+              </div>
+            </li>
+            <li>
+              <a href="#"><i class="bi bi-camera-video"></i> Видео</a>
+            </li>
+            <li>
+              <a href="#"><i class="bi bi-images"></i> Фотографии</a>
+            </li>
+            <li>
+              <a href="#"><i class="bi bi-book"></i> Альбомы</a>
+            </li>
+            <li>
+              <a href="#"><i class="bi bi-trash3"></i> Корзина</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </header>
-    <main>
-        {% block content %}{% endblock %}
-    </main>
-
-    <script>
-        $(function(){
-            $("#upload-form").hide(); // Скрыть форму при загрузке страницы
-            $("#upload-btn").click(function(){
-                $("#upload-form").toggle();
-            });
-        });
-    </script>
-</body>
+    <main>{% block content %}{% endblock %}</main>
+  </body>
 </html>
