--- a/gallery/mainApp/templates/Gallery.html
+++ b/gallery/mainApp/templates/Gallery.html
@@ -1,14 +1,9 @@
-{% extends 'BaseGallery.html' %}
-
-{% block title %}Gallery{% endblock %}
-
-{% block content %}
-    {% for photo in photos %}
-        <div class="gallery">
-          <a target="_blank" href="photo.image.url">
-            <img src="{{photo.image.url}}" alt="photo" width="250" height="380">
-          </a>
-          <div class="desc">Загружено {{photo.created_at|date:"d.m.Y в H:i"}}</div>
-        </div>
-        {% endfor %}
-{% endblock %}
+{% extends 'BaseGallery.html' %} {% block title %}Gallery{% endblock %} {% block
+content %} {% for photo in photos %}
+<div class="gallery">
+  <a target="_blank" href="photo.image.url">
+    <img src="{{photo.image.url}}" alt="photo" width="250" height="380" />
+  </a>
+  <div class="desc">Загружено {{photo.created_at|date:"d.m.Y в H:i"}}</div>
+</div>
+{% endfor %}
