--- a/gallery/mainApp/templates/Base.html
+++ b/gallery/mainApp/templates/Base.html
@@ -13,7 +13,15 @@
     <title>{% block title %}My Site{% endblock %}</title>
 </head>
 <body>
-
+<!--    <header>-->
+<!--        <h1>{% block header %}My Site{% endblock %}</h1>-->
+<!--    </header>-->
+<!--    <nav>-->
+<!--        <ul>-->
+<!--            <li><a href="/">Home</a></li>-->
+<!--            <li><a href="/about/">About</a></li>-->
+<!--        </ul>-->
+<!--    </nav>-->
     <main>
         {% block content %}{% endblock %}
     </main>
