--- a/gallery/mainApp/templates/BaseGallery.html
+++ b/gallery/mainApp/templates/BaseGallery.html
@@ -7,11 +7,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script> -->
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI/tTQaC2FkY9e3kVbZUlg/e51Z8+JJw8MaXaOqI=" crossorigin="anonymous"></script>
-    <script src="{% static 'changingimage.js' %}"></script>
+    <!-- <script type="text/javascript" src="{{ STATIC_URL }} /static/js/jquery-3.7.1.js"></script> -->
+    <script src="{% static 'js\changeImage.js' %}"></script>
+    <script src="{% static 'js\cropper.js' %}"></script>
+    <script src="{% static 'js\main.js' %}"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/cropper/4.1.0/cropper.min.js"></script> -->
+
+     
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cropper/4.1.0/cropper.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="{% static 'css/main.css'%}">
 </head>
@@ -22,7 +32,7 @@
         </h1>
         <input type="text" placeholder="Search..">
         <div class="buttons-container">
-            <button onclick="myFunction()">Кнопка 1</button>
+            <button>Кнопка 1</button>
             <button>Кнопка 2</button>
         </div>
     </div>
@@ -32,18 +42,18 @@
                 <ul class="unstyled list-hover-slide">
                     <li>
                         <button id="upload-btn">Upload Photos</button>
-                            <form id="upload-form" action="" method="post" autocomplete="off" enctype="multipart/form-data">
+                            <form id="upload-form" action="{% url 'gallery' %}" method="post" autocomplete="off" enctype="multipart/form-data">
                             {% csrf_token %}
                             {{ form.as_p }}
                             <input type="submit" value="Submit">
                             </form>
                     </li>
                     <li>
-                        <a href="#"><i class="bi bi-camera-video"></i> Видео</a>
+                        <a href="{% url 'videos' %}"><i class="bi bi-camera-video"></i> Видео</a>
                     </li>
-                    <li><a href="#"><i class="bi bi-images"></i> Фотографии</a></li>
-                    <li><a href="#"><i class="bi bi-book"></i> Альбомы</a></li>
-                    <li><a href="#"><i class="bi bi-trash3"></i> Корзина</a></li>
+                    <li><a href="{% url 'gallery' %}"><i class="bi bi-images"></i> Фотографии</a></li>
+                    <li><a href="{% url 'albums' %}"><i class="bi bi-book"></i> Альбомы</a></li>
+                    <li><a href="{% url 'bin' %}"><i class="bi bi-trash3"></i> Корзина</a></li>
                 </ul>
             </nav>
         </div>
@@ -51,6 +61,7 @@
     <main>
         {% block content %}{% endblock %}
     </main>
+</body>
 
     <script>
         $(function(){
@@ -60,5 +71,6 @@
             });
         });
     </script>
-</body>
+
+    <script src="{% static 'js/RightClickMenu.js' %}"></script>
 </html>
