--- a/gallery/mainApp/templates/Videos.html
+++ b/gallery/mainApp/templates/Videos.html
@@ -1,18 +1,30 @@
 {% extends 'BaseGallery.html' %}
+{% load static %}
 
 {% block content %}
     {% csrf_token %}
-    {% for video in videos %}
-        <!--    bootstrap element for beautiful card view. Also in videos.html, Gallery.html, SomeAlbum.html-->
-        <div class="card" style="width: 18rem;" data-photo-id="{{ video.id }}">
-            <video controls width="250" height="380">
-                    <source src="{{ video.file.url }}" type="video/mp4">
-                    Your browser does not support the video tag.
-            </video>
-            <div class="card-body">
-                <h5 class="card-title">{{ video.title }}</h5>
-                <p class="card-text">Загружено {{video.created_at|date:"d.m.Y в H:i"}}</p>
+    {% if videos %}
+        {% for video in videos %}
+            <!--bootstrap element for beautiful card view. Also in videos.html, Gallery.html, SomeAlbum.html-->
+            <div class="card" style="width: 18rem;" data-photo-id="{{ video.id }}">
+                <video controls width="250" height="380">
+                        <source src="{{ video.file.url }}" type="video/mp4">
+                        Your browser does not support the video tag.
+                </video>
+                <div class="card-body">
+                    <h5 class="card-title">{{ video.title }}</h5>
+                    <p class="card-text">Загружено {{video.created_at|date:"d.m.Y в H:i"}}</p>
+                </div>
+            </div>
+        {% endfor %}
+    {% else %}
+        <div class="zero_gallery">
+            <div>
+                <h2 class="zero_text">Ваше хранилище пусто</h2>
+            </div>
+            <div>
+                <img class="zero_img" src="{% static 'img/box.png'%}">
             </div>
         </div>
-    {% endfor %}
+    {% endif %}
 {% endblock %}
