dng/raw added. Правда нельзя удалять, так что на видосе не показываем удаление

--- a/gallery/mainApp/templates/Albums.html
+++ b/gallery/mainApp/templates/Albums.html
@@ -1,6 +1,6 @@
 {% extends 'BaseGallery.html' %}
 
-{% block title %}Gallery{% endblock %}
+{% block title %}Albums{% endblock %}
 
 {% block content %}
     <button type="button" class="create-album" data-toggle="modal" data-target="#exampleModal">
