--- a/gallery/mainApp/templates/Base.html
+++ b/gallery/mainApp/templates/Base.html
@@ -10,7 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI/tTQaC2FkY9e3kVbZUlg/e51Z8+JJw8MaXaOqI=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{% static 'css/main.css'%}">
-    <title>{% block title %}My Site{% endblock %}</title>
+    <title>{% block title %}SharedPhotos{% endblock %}</title>
 </head>
 <body>
 <!--    <header>-->
