--- a/gallery/mainApp/templates/BaseGallery.html
+++ b/gallery/mainApp/templates/BaseGallery.html
@@ -6,6 +6,7 @@
     <title>{% block title %}{% endblock %}</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="{% static 'img/logo.png' %}" type="image/png">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
@@ -19,17 +20,13 @@
     <link rel="stylesheet" href="{% static 'css/main.css'%}">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script> -->
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI/tTQaC2FkY9e3kVbZUlg/e51Z8+JJw8MaXaOqI=" crossorigin="anonymous"></script>
-    <!-- <script type="text/javascript" src="{{ STATIC_URL }} /static/js/jquery-3.7.1.js"></script> -->
     <script src="{% static 'js\changeImage.js' %}"></script>
     <script src="{% static 'js\cropper.js' %}"></script>
     <script src="{% static 'js\main.js' %}"></script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/cropper/4.1.0/cropper.min.js"></script> -->
 
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cropper/4.1.0/cropper.min.css">
@@ -39,12 +36,11 @@
 <body>
     <div class="topnav">
         <h1 class="logo">
-            <a href="#">SharedPhotos</a>
+            <a href="{% url 'gallery' %}">SharedPhotos</a>
         </h1>
         <input type="text" placeholder="Search..">
         <div class="buttons-container">
-            <button>Кнопка 1</button>
-            <button>Кнопка 2</button>
+            <a class="logout_button" href="{% url 'logout' %}"><i class="bi bi-box-arrow-right bi-6x"></i></a>
         </div>
     </div>
     <header class="headernav" role="banner">
@@ -52,12 +48,12 @@
             <nav class="main-nav" role="navigation">
                 <ul class="unstyled list-hover-slide">
                     <li>
-                        <button id="upload-btn">Upload Photos</button>
-                            <form id="upload-form" action="{% url 'gallery' %}" method="post" autocomplete="off" enctype="multipart/form-data">
+                        <!--юзанул это, потому что формы сложно красить, и кнопки красивые легче спастить-->
+                        <button class="upload_button" onclick="document.getElementById('input_upload').click()"><span class="plus_in_upload">+</span> Загрузить</button>
+                        <form id="upload-form" action="{% url 'gallery' %}" method="post" autocomplete="off" enctype="multipart/form-data" style="display:none">
                             {% csrf_token %}
-                            {{ form.as_p }}
-                            <input type="submit" value="Submit">
-                            </form>
+                            {{ form }}
+                        </form>
                     </li>
                     <li>
                         <a href="{% url 'videos' %}"><i class="bi bi-camera-video"></i> Видео</a>
@@ -97,16 +93,7 @@
     </main>
 </body>
 
-    <script>
-        $(function(){
-            $("#upload-form").hide(); // Скрыть форму при загрузке страницы
-            $("#upload-btn").click(function(){
-                $("#upload-form").toggle();
-            });
-        });
-    </script>
+<script src="{% static 'js/RightClickMenu.js' %}"></script>
 
-    <script src="{% static 'js/RightClickMenu.js' %}"></script>
-
-    {% block scripts %}{% endblock %}
+{% block scripts %}{% endblock %}
 </html>
