--- a/gallery/mainApp/templates/Albums.html
+++ b/gallery/mainApp/templates/Albums.html
@@ -20,7 +20,7 @@
             </div>
             <div class="modal-body">
               {% csrf_token %}
-              {{ album_form.as_p }}
+              {{ album_form }}
             </div>
             <div class="modal-footer">
               <button type="submit" class="btn btn-primary">Создать</button>
