--- a/gallery/mainApp/templates/SomeAlbum.html
+++ b/gallery/mainApp/templates/SomeAlbum.html
@@ -5,7 +5,11 @@
 
 {% block content %}
     <div class="album_title_div">
-        <h2 class="album_title">{{ album.title }} <a href="{% url 'download_album' album.id %}" class="download_button"><i class="bi bi-cloud-download"></i></a></h2>
+        <h2 class="album_title">{{ album.title }}
+            {% if photos%}
+                <a href="{% url 'download_album' album.id %}" class="download_button"><i class="bi bi-cloud-download"></i></a>
+            {% endif %}
+        </h2>
     </div>
     {% if not member %}
         {% csrf_token %}
@@ -51,6 +55,14 @@
             <div class="card-body">
                 <h5 class="card-title">{{ file.title }}</h5>
                 <p class="card-text">Загружено {{file.created_at|date:"d.m.Y в H:i"}}</p>
+                    {% if file.tags.all %}
+                        <p>Теги:
+                            {% for tag in file.tags.all %}
+                                {{ tag.name }}
+                                {% if not forloop.last %}, {% endif %}
+                            {% endfor %}
+                        </p>
+                    {% endif %}
             </div>
         </div>
     {% endfor %}
@@ -69,6 +81,7 @@
             </div>
         </div>
     {% endfor %}
+
 {% endblock %}
 
 
