--- a/gallery/mainApp/templates/Videos.html
+++ b/gallery/mainApp/templates/Videos.html
@@ -9,7 +9,7 @@
         {% for video in videos %}
             <!--bootstrap element for beautiful card view. Also in videos.html, Gallery.html, SomeAlbum.html-->
             <div class="card" style="width: 18rem;" data-photo-id="{{ video.id }}">
-                <video controls width="250" height="380">
+                <video controls width="100%" height="400">
                         <source src="{{ video.file.url }}" type="video/mp4">
                         Your browser does not support the video tag.
                 </video>
